api_setup/apikey-generator/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-api-keygen
  namespace: bock
  labels:
    app: map-api-keygen
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: map-api-keygen
  template:
    metadata:
      labels:
        app: map-api-keygen
    spec:
      containers:
        - name: map-api-keygen
          image: madhavkeshava/map-api-keygen:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
