api_setup/apikey-generator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-api-keygen-svc
  namespace: demo
  labels:
    app: map-api-keygen
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: map-api-keygen
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
